php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42072 No warning message for clearstatcache() with arguments
Submitted: 2007-07-22 18:08 UTC Modified: 2007-11-02 12:56 UTC
From: mahesh dot vemula at in dot ibm dot com Assigned:
Status: Closed Package: *General Issues
PHP Version: 6CVS OS: RHEL 4, Windows Xp
Private report: No CVE-ID: None
 [2007-07-22 18:08 UTC] mahesh dot vemula at in dot ibm dot com
Description:
------------
PHP engine doesn?t throw the Warning message regarding ?Wrong parameter count? for the function clearstatcache() with one or more arguments, as function expects zero number (void) of arguments.




Environment:
Operating System: Linux, Windows XP
PHP Version:PHP 5.2.4-dev (cli) (built: Jul 21 2007 19:21:35)
Copyright (c) 1997-2007 The PHP Group
Zend Engine v2.2.0, Copyright (c) 1998-2007 Zend Technologies
Configure Setup: ./configure


Reproduce code:
---------------
var_dump( clearstatcache("cache") ); //args > expected
var_dump( clearstatcache("cache", 100) ); //args > expected
var_dump( clearstatcache("cache", 100, TRUE) ); //args > expected


Expected result:
----------------
PHP Warning:  Wrong parameter count for clearstacache() in %s code on line %d
NULL
PHP Warning:  Wrong parameter count for clearstacache() in %s code on line %d
NULL
PHP Warning:  Wrong parameter count for clearstacache() in %s code on line %d
NULL


Actual result:
--------------
NULL
NULL
NULL


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-07-23 23:03 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2007-08-13 06:24 UTC] mahesh dot vemula at in dot ibm dot com
Warning message is expected for PHP6 also.
 [2007-09-02 11:54 UTC] bjori@php.net
Fixed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 00:00:01 2026 UTC