MFB: Fixed bug #42072 (No warning message for clearstatcache() with arguments).